# CompSE3

./: .gitignore  .gitmodules  README.md  pyproject.toml
compse3/: __init__.py  composite_junctions.py  composite_transformation.py  se3_junction_methods.py
